--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description"
-          content="Welcome to my site! I'm Maks, a programmer interested in building Telegram bots, WebDev and DevOps. Here, you'll learn more about me. Connect with me on GitHub, Twitter, Telegram, and Instagram, and let's build something amazing together!"/>
-    <meta name="keywords"
-          content="Mak5er, Makser, Maksym, Reva, Maksym Reva, portfolio, Telegram bots, DevOps, React, programming, developer, projects, web development, Telegram bot development, aiogramvite"/>
-    <meta name="referrer" content="no-referrer" />
-    <meta name="author" content="Mak5er" />
+          content="Welcome to my portfolio! I’m Maks, a programmer from Ukraine. Explore my work and get in touch with me here!"/>
+    <link rel="canonical" href="https://www.mak5er.com/"/>
+    <meta name="referrer" content="no-referrer"/>
+    <meta name="author" content="Mak5er"/>
 
     <title>Mak5er</title>
 </head>
