--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
     <link rel="canonical" href="https://www.mak5er.com/"/>
     <meta name="referrer" content="no-referrer"/>
     <meta name="author" content="Mak5er"/>
-
     <title>Mak5er</title>
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.mak5er.com/"/>
+    <meta property="og:title" content="Mak5er | Portfolio"/>
+    <meta property="og:description" content="Welcome to my portfolio! I’m Maks, a programmer from Ukraine. Explore my work and get in touch with me here!"/>
+    <meta property="og:image" content="https://www.mak5er.com/favicon.svg"/>
+    <meta property="og:locale" content="en_US"/>
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@Mak5er"/>
+    <meta name="twitter:title" content="Mak5er | Portfolio"/>
+    <meta name="twitter:description" content="Welcome to my portfolio! I’m Maks, a programmer from Ukraine. Explore my work and get in touch with me here!"/>
+    <meta name="twitter:image" content="https://www.mak5er.com/favicon.svg"/>
+
+    <!-- Meta tags for other platforms -->
+    <meta property="og:site_name" content="Mak5er Portfolio"/>
+    <meta name="linkedin:title" content="Mak5er | Portfolio"/>
+    <meta name="linkedin:description" content="Welcome to my portfolio! I’m Maks, a programmer from Ukraine. Explore my work and get in touch with me here!"/>
+    <meta name="linkedin:image" content="https://www.mak5er.com/favicon.svg"/>
 </head>
 <body>
 <div id="root"></div>
